kubernetes/main/apps/networking/external-apps/config/adguard.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: adguard
  labels:
    kubernetes.io/service-name: adguard
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 3000
endpoints:
  - addresses:
      - 192.168.1.1

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/external: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: adguard-home.png
    gethomepage.dev/name: AdGuard Home
  name: adguard
spec:
  ingressClassName: internal
  rules:
    - host: &host adguard.18b.haus
      http:
        paths:
          - backend:
              service:
                name: adguard
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
