kubernetes/main/apps/networking/external-apps/config/opnsense.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.18b.haus/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opnsense
  annotations:
    gatus.home-operations.com/enabled: "false"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/external: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: opnsense.png
    gethomepage.dev/name: OPNsense
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - opnsense.18b.haus
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: opnsense
