kubernetes/main/apps/networking/external-apps/config/pve.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.18b.haus/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pve
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/external: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: proxmox.png
    gethomepage.dev/name: Proxmox VE
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - pve.18b.haus
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: pve
---
# yaml-language-server: $schema=https://kubernetes-schemas.18b.haus/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: pve
spec:
  mergeType: StrategicMerge
  loadBalancer:
    consistentHash:
      type: SourceIP
    type: ConsistentHash
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: pve
