kubernetes/main/apps/networking/external-apps/config/static-content.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.18b.haus/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: static-content
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  parentRefs:
    - name: external
      namespace: networking
      sectionName: https
  hostnames:
    - static.18b.haus
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: not-found
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: static-content
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            remove:
              - server
              - x-amz-id-2
              - x-amz-request-id
              - x-amz-version-id
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: static-content
          namespace: networking
---
# yaml-language-server: $schema=https://kubernetes-schemas.18b.haus/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: static-content
spec:
  mergeType: StrategicMerge
  responseOverride:
    - match:
        statusCodes:
          - type: Value
            value: 404
      response:
        contentType: text/plain
        body:
          type: Inline
          inline: Not Found.
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: static-content
