kubernetes/main/apps/networking/external-apps/config/unifi.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.18b.haus/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi
  annotations:
    gatus.home-operations.com/enabled: "false"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/external: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: unifi-controller.png
    gethomepage.dev/name: UniFi
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - unifi.18b.haus
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: unifi
---
# yaml-language-server: $schema=https://kubernetes-schemas.18b.haus/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: unifi
spec:
  mergeType: StrategicMerge
  useClientProtocol: true
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: unifi
